fixed free coins validation

--- a/src/app/freecoins/freecoins-popup/freecoins-popup-step-one/freecoins-popup-step-one.component.html
+++ b/src/app/freecoins/freecoins-popup/freecoins-popup-step-one/freecoins-popup-step-one.component.html
@@ -4,7 +4,8 @@
     [formGroup]="form"
     (ngSubmit)="onSubmit($event)"
     novalidate
-    *ngIf="activeCurrency">
+    *ngIf="activeCurrency"
+  >
     <div class="refill__inputs-wrap">
       <!-- TODO add styles to select--error -->
 
@@ -13,7 +14,8 @@
           <app-currency-select-crypto
             [activeCurrency]="activeCurrency"
             [currencies]="currencies"
-            (selectCurrency)="selectCurrency($event)"></app-currency-select-crypto>
+            (selectCurrency)="selectCurrency($event)"
+          ></app-currency-select-crypto>
         </div>
 
         <div
@@ -21,21 +23,23 @@
           [ngClass]="{
           'wrap-input--error': formAmount.invalid&& (formAmount.touched ||
           isSubmited)
-          }">
+          }"
+        >
 
           <div class="avaliable full-width">{{'Available:' | translate}}
             <a
               (click)="balanceClick()"
-              class="link">
+              class="link"
+            >
               {{activeBalance | currencyFormat}} {{activeCurrency.name}}
             </a>
           </div>
           <app-price-input
             [placeholder]="activeCurrency.name + ' give away Amount'"
             [currencyName]="activeCurrency.name"
-            (customInput)="onInputAmount($event)"
             name="amount"
-            formControlName="amount">
+            formControlName="amount"
+          >
           </app-price-input>
 
           <span class="bottom-tooltip wrap-input__message--show">
@@ -54,7 +58,8 @@
               <span
                 class="wrap-input__message wrap-input__message--show"
                 *ngIf="formAmount.errors['maxAmount'] && (formAmount.touched ||
-                isSubmited)">
+                isSubmited)"
+              >
                 {{
                 'Your available balance:' | translate
                 }} {{
@@ -66,7 +71,8 @@
               <span
                 class="wrap-input__message wrap-input__message--show"
                 *ngIf="formAmount.errors['minAmount'] && (formAmount.touched ||
-                isSubmited)">
+                isSubmited)"
+              >
                 {{
                 'Min amount is:' | translate
                 }} {{
@@ -88,10 +94,11 @@
               formControlName="isOneTime"
               (change)="onCheckeOneTime($event)"
               class="accessibility-content"
-              />
+            />
             <label
               for="oneTime"
-              class="read"></label>
+              class="read"
+            ></label>
             <span>{{'One-time distribution' | translate}}</span>
           </div>
         </div>
@@ -101,7 +108,8 @@
           [ngClass]="{
           'wrap-input--error': formPeriod.invalid && (formPeriod.touched ||
           isSubmited)
-          }">
+          }"
+        >
           <input
             appOnlyNumbers="true"
             class="wrap-input__input period-input"
@@ -109,10 +117,12 @@
             name="period"
             required
             autocomplete="off"
-            formControlName="period">
+            formControlName="period"
+          >
           <label
             class="wrap-input__label"
-            for="">{{'Period (minutes)' | translate}}</label>
+            for=""
+          >{{'Period (minutes)' | translate}}</label>
 
           <span class="bottom-tooltip wrap-input__message--show">
             {{
@@ -130,7 +140,8 @@
               <span
                 class="wrap-input__message wrap-input__message--show"
                 *ngIf="formPeriod.errors['minPeriod'] && (formPeriod.touched ||
-                isSubmited)">
+                isSubmited)"
+              >
                 {{
                 'Min period is:' | translate
                 }} {{
@@ -142,7 +153,8 @@
               <span
                 class="wrap-input__message wrap-input__message--show"
                 *ngIf="formPeriod.errors['maxPeriod'] && (formPeriod.touched ||
-                isSubmited)">
+                isSubmited)"
+              >
                 {{
                 'Max period is:' | translate
                 }} {{
@@ -161,12 +173,14 @@
           [ngClass]="{
           'wrap-input--error': formPrize.invalid && (formPrize.touched ||
           isSubmited)
-          }">
+          }"
+        >
           <app-price-input
             [placeholder]="activeCurrency.name + ' prize Amount'"
             [currencyName]="activeCurrency.name"
             name="prize"
-            formControlName="prize">
+            formControlName="prize"
+          >
           </app-price-input>
 
           <span class="bottom-tooltip wrap-input__message--show">
@@ -185,11 +199,12 @@
               <span
                 class="wrap-input__message wrap-input__message--show"
                 *ngIf="formPrize.errors['maxPrize'] && (formPrize.touched ||
-                isSubmited)">
+                isSubmited)"
+              >
                 {{
                 'Max amount is:' | translate
                 }} {{
-                (formAmount.value || 0) | currencyFormat
+                maxPrize | currencyFormat
                 }} {{
                 activeCurrency.name
                 }}
@@ -197,7 +212,8 @@
               <span
                 class="wrap-input__message wrap-input__message--show"
                 *ngIf="formPrize.errors['minPrize'] && (formPrize.touched ||
-                isSubmited)">
+                isSubmited)"
+              >
                 {{
                 'Min amount is:' | translate
                 }} {{
@@ -217,7 +233,8 @@
     <div class="send__line"></div>
     <div
       class="send__info"
-      *ngIf="activeCurrency">
+      *ngIf="activeCurrency"
+    >
       <div class="send__info-row">
         <div class="send__info-title">{{'You want to give away:' | translate}}</div>
         <div class="send__info-value">{{formAmount.value || 0 | currencyFormat}}
@@ -227,11 +244,13 @@
         <div class="send__info-title">{{'Period:' | translate}}</div>
         <div
           class="send__info-value"
-          *ngIf="!formOneTime.value">{{formPeriod.value || 0}}
+          *ngIf="!formOneTime.value"
+        >{{formPeriod.value || 0}}
           {{formPeriod.value > 1 ? 'minutes': 'minute'}} </div>
         <div
           class="send__info-value"
-          *ngIf="formOneTime.value">{{'One-time distribution'}} </div>
+          *ngIf="formOneTime.value"
+        >{{'One-time distribution'}} </div>
       </div>
       <div class="send__info-row">
         <div class="send__info-title">{{activeCurrency.name}} {{'prize amount:'
@@ -248,7 +267,8 @@
     <button
       class="btn btn--center"
       [disabled]="form.invalid"
-      type="submit">
+      type="submit"
+    >
       {{'Give away' | translate}}
     </button>
     <div class="send__line"></div>
