--- a/src/app/popups/notifications-list/top-notification/top-notification.component.html
+++ b/src/app/popups/notifications-list/top-notification/top-notification.component.html
@@ -2,8 +2,8 @@
   class="ieo-notifications active"
   [ngClass]="{
     'success': title === 'SUCCESS',
-    'error': title === 'ERROR',
-    'info': title === 'WARNING' ||  title === 'INFORMATION' || title === 'ALERT'
+    'error': title === 'ERROR' || title === 'WARNING',
+    'info': title === 'INFORMATION' || title === 'ALERT'
   }"
   id="ieo-notification"
 >
