DEVEX-4025 fixed  notification color

--- a/src/app/popups/notifications-list/top-notification-report/top-notification-report.component.html
+++ b/src/app/popups/notifications-list/top-notification-report/top-notification-report.component.html
@@ -2,7 +2,8 @@
   class="ieo-notifications active"
   [ngClass]="{
     'success': title === 'SUCCESS',
-    'error': title === 'ERROR' || title === 'WARNING',
+    'error': title === 'ERROR',
+    'warning': title === 'WARNING',
     'info': title === 'INFORMATION' || title === 'ALERT'
   }"
   id="ieo-notification"
