--- a/src/app/popups/notifications-list/top-notification/top-notification.component.scss
+++ b/src/app/popups/notifications-list/top-notification/top-notification.component.scss
@@ -3,7 +3,7 @@
   padding: 0!important;
   background: none;
 }
-  
+
 .ieo-notifications{
     &.success{
       background: #32A071;
@@ -14,6 +14,12 @@
     &.error{
       background: #EB5757;
       .ieo-error{
+        display: block;
+      }
+    }
+    &.warning{
+      background: #FE9B00;
+      .ieo-warning{
         display: block;
       }
     }
