add numeric keyboard mobile

--- a/src/app/funds/balance/refill-money/refill-step-three/refill-step-three.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-three/refill-step-three.component.html
@@ -24,6 +24,7 @@
           type="text"
           name="code"
           formControlName="code"
+          inputmode="numeric"
           required
         >
         <label
