--- a/src/app/funds/balance/send-money/send-step-three/send-tfa/send-tfa.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/send-tfa/send-tfa.component.html
@@ -21,6 +21,7 @@
         name="pin"
         formControlName="pin"
         autocomplete="off"
+        inputmode="numeric"
         required
       >
       <label class="wrap-input__label">{{'Authenticator code' | translate}}</label>
