--- a/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
+++ b/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
@@ -220,6 +220,7 @@
               class="wrap-input__input"
               type="text"
               formControlName="pin"
+              inputmode="numeric"
               [ngClass]="{'wrap-input__input--error': !pinForm.get('pin').valid && pinForm.get('pin').touched}"
             >
             <label
