--- a/src/app/shared/components/price-input/price-input.component.html
+++ b/src/app/shared/components/price-input/price-input.component.html
@@ -4,6 +4,7 @@
   [class.dirty]="price.dirty"
   [ngClass]="{'wrap-input__input--small': forTrading}"
   type="text"
+  inputmode="numeric"
   #price="ngModel"
   name="price"
   required
@@ -13,6 +14,16 @@
   (blur)="onBlur($event)"
   (focus)="onFocus()"
 >
-<label class="wrap-input__label" for="">{{placeholder}}</label>
-<label class="wrap-input__currency" for="" *ngIf="forTrading">{{currencyLabel}}</label>
-<div class="wrap-input__line" *ngIf="!forTrading"></div>
+<label
+  class="wrap-input__label"
+  for=""
+>{{placeholder}}</label>
+<label
+  class="wrap-input__currency"
+  for=""
+  *ngIf="forTrading"
+>{{currencyLabel}}</label>
+<div
+  class="wrap-input__line"
+  *ngIf="!forTrading"
+></div>
