DEVEX-4037 and  DEVEX-4031 fixed

--- a/src/app/freecoins/freecoins-popup/freecoins-popup-step-two/freecoins-popup-step-two.component.html
+++ b/src/app/freecoins/freecoins-popup/freecoins-popup-step-two/freecoins-popup-step-two.component.html
@@ -3,13 +3,15 @@
     <h2 class="title refill__title">{{'Two-factor Authentications' | translate}}</h2>
     <h4
       class="popup__subtitle popup_title--dm"
-      [ngClass]="{'msg-error' : isError}">
+      [ngClass]="{'msg-error' : isError}"
+    >
       {{twoFaTitle}}
     </h4>
 
     <form
       [formGroup]="form"
-      (ngSubmit)="onSubmit()">
+      (ngSubmit)="onSubmit()"
+    >
       <div class="input-block wrap-input popup__wrap-input">
         <input
           class="wrap-input__input"
@@ -17,18 +19,20 @@
           type="text"
           name="code"
           formControlName="code"
-          required>
+          required
+        >
         <label
           class="wrap-input__label"
           [ngClass]="{'wrap-input__label--error' : isError}"
-
-          for="code">{{'Code' | translate}}</label>
+          for="code"
+        >{{'Code' | translate}}</label>
         <ng-container *ngIf="formPin.invalid && !formPin.untouched &&
           !statusMessage">
           <div class="input-hint-wrapper">
             <span
               class="wrap-input__message"
-              *ngIf="formPin.invalid">
+              *ngIf="formPin.invalid"
+            >
               {{'Code field is required.' | translate}}
             </span>
           </div>
@@ -44,7 +48,8 @@
       <button
         class="btn btn--center"
         type="submit"
-        [disabled]="form.invalid">
+        [disabled]="form.invalid || loading"
+      >
         {{'Confirm' | translate}}
       </button>
     </form>
