DEVEX-4045 added app-price-input example

--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -63,6 +63,48 @@
             name="amount"
             formControlName="amount"
           >
+            <!--Input error section starts-->
+            <div *ngIf="formAmount.errors">
+              <div class="input-hint-wrapper">
+                <span
+                  class="wrap-input__message wrap-input__message--show"
+                  *ngIf="formAmount.errors['isMinThenMinWithdraw'] &&  (formAmount.touched || isSubmited)"
+                >
+                  {{
+                    'Minimum sum for withdrawal' | translate
+                  }} {{
+                    minWithdrawSum | currencyFormat
+                  }} {{
+                    currName
+                  }}
+                </span>
+                <span
+                  class="wrap-input__message wrap-input__message--show"
+                  *ngIf="formAmount.errors['isMaxThenActiveBalance'] && (formAmount.touched || isSubmited)"
+                >
+                  {{
+                    'Your available balance:' | translate
+                  }} {{
+                    activeBalance | currencyFormat
+                  }} {{
+                    currName
+                  }}
+                </span>
+                <span
+                  class="wrap-input__message wrap-input__message--show"
+                  *ngIf="formAmount.errors['isMaxThenDailyLimit'] && (formAmount.touched || isSubmited)"
+                >
+                  {{
+                    'Your 24h limit to withdrawal:' | translate
+                  }} {{
+                    dailyLimit | currencyFormat
+                  }} {{
+                    currName
+                  }}
+                </span>
+              </div>
+            </div>
+            <!--Input error section ends-->
           </app-price-input>
 
           <span class="bottom-tooltip wrap-input__message--show">
@@ -74,49 +116,6 @@
             currName
             }}
           </span>
-
-          <!--Input error section starts-->
-          <div *ngIf="formAmount.errors != null">
-            <div class="input-hint-wrapper">
-              <span
-                class="wrap-input__message wrap-input__message--show"
-                *ngIf="formAmount.errors['isMinThenMinWithdraw'] &&  (formAmount.touched || isSubmited)"
-              >
-                {{
-                  'Minimum sum for withdrawal' | translate
-                }} {{
-                  minWithdrawSum | currencyFormat
-                }} {{
-                  currName
-                }}
-              </span>
-              <span
-                class="wrap-input__message wrap-input__message--show"
-                *ngIf="formAmount.errors['isMaxThenActiveBalance'] && (formAmount.touched || isSubmited)"
-              >
-                {{
-                  'Your available balance:' | translate
-                }} {{
-                  activeBalance | currencyFormat
-                }} {{
-                  currName
-                }}
-              </span>
-              <span
-                class="wrap-input__message wrap-input__message--show"
-                *ngIf="formAmount.errors['isMaxThenDailyLimit'] && (formAmount.touched || isSubmited)"
-              >
-                {{
-                  'Your 24h limit to withdrawal:' | translate
-                }} {{
-                  dailyLimit | currencyFormat
-                }} {{
-                  currName
-                }}
-              </span>
-            </div>
-          </div>
-          <!--Input error section ends-->
         </div>
       </div>
 
