--- a/src/app/funds/balance/qubera-table/qubera-table.component.scss
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.scss
@@ -29,3 +29,8 @@
     color: #EB5757;
     margin-bottom: 30px;
 }
+.warning{
+  font-size: 24px;
+    line-height: 1.3;
+    margin-bottom: 30px;
+}
