--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -154,7 +154,16 @@
           name="amount"
           class="fiat-amount"
           (customBlur)="amountBlur()"
-        ></app-price-input>
+        >
+          <div
+            class="input-hint-wrapper"
+            *ngIf="!form.valid"
+          >
+            <span class="wrap-input__message">
+              {{'Should be at least' | translate}} {{minRefillSum | currencyFormat: 'USD'}}
+            </span>
+          </div>
+        </app-price-input>
 
         <div class="wrap-input__message--show">
           <span>
@@ -164,14 +173,7 @@
         </div>
       </div>
 
-      <div
-        class="input-hint-wrapper"
-        *ngIf="!form.valid && isSubmited"
-      >
-        <span class="wrap-input__message">
-          {{'Should be at least' | translate}} {{minRefillSum | currencyFormat: 'USD'}}
-        </span>
-      </div>
+
     </div>
   </form>
   <ng-container *ngIf="!submitSuccess && !isQIWI">
