--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,43 +3,7 @@
   [ngClass]="{'dark-theme': isCurrentThemeDark()}"
 >
 
-  <article
-    class="banner-wr"
-    [ngClass]="{'main-page': isMainPage}"
-    id="banner-wr"
-    *ngIf="!technicalWorks"
-  >
-    <style>
-      .banner-content {
-        width: 100%;
-        overflow: hidden;
-        position: relative;
-        height: 36px;
-        display: flex;
-        justify-content: center;
-      }
-
-      .banner-content img {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-
-        margin: 0 auto;
-        min-width: 100%;
-        display: block;
-      }
-
-    </style>
-    <a
-      class="banner-content"
-      routerLink="/ieo/2"
-    >
-      <img
-        src="assets/img/dom-banner.gif"
-        alt=""
-      >
-    </a>
-  </article>
+  <app-banner></app-banner>
   <!-- *ngIf="technicalWorks" -->
   <div
     class="tech-banner"
