add fourth banner

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -7,6 +7,16 @@
   [config]="slideConfig"
 >
   <a
+    class="banner-content"
+    routerlink="/ieo/2"
+    ngxSlickItem
+  >
+    <img
+      alt=""
+      src="assets/img/dom-banner.gif"
+    >
+  </a>
+  <a
     ngxSlickItem
     class="banner-content"
     routerLink="http://bit.ly/2NnYbhA"
