--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -7,9 +7,10 @@
   [config]="slideConfig"
 >
   <a
-    class="banner-content"
-    routerlink="/ieo/2"
     ngxSlickItem
+    href='#'
+    class="banner-content"
+    [routerLink]="['/ieo/2']"
   >
     <img
       alt=""
@@ -19,7 +20,7 @@
   <a
     ngxSlickItem
     class="banner-content"
-    routerLink="http://bit.ly/2NnYbhA"
+    href="http://bit.ly/2NnYbhA"
   >
     <img
       src="assets/img/1.banner.gif"
@@ -29,7 +30,7 @@
   <a
     ngxSlickItem
     class="banner-content"
-    routerLink="http://bit.ly/2V3rSFD"
+    href="http://bit.ly/2V3rSFD"
   >
     <img
       src="assets/img/2.banner.gif"
@@ -39,7 +40,7 @@
   <a
     ngxSlickItem
     class="banner-content"
-    routerLink="http://bit.ly/2V1Jr96"
+    href="http://bit.ly/2V1Jr96"
   >
     <img
       src="assets/img/3-banner.gif"
