fixed techincal works flag

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
   [ngClass]="{'dark-theme': isCurrentThemeDark()}"
 >
 
-  <app-banner></app-banner>
-  <!-- *ngIf="technicalWorks" -->
+  <app-banner *ngIf="!technicalWorks"></app-banner>
+
   <div
     class="tech-banner"
     *ngIf="technicalWorks"
