--- a/src/app/main-page/info-grafics/info-grafics.component.html
+++ b/src/app/main-page/info-grafics/info-grafics.component.html
@@ -2,30 +2,63 @@
   <div class="markets-block-link">
     <div class="link-item">
       <div class="icon-wr">
-        <img src="assets/img/info-gr1.svg" alt="">
+        <img
+          src="assets/img/info-gr1.svg"
+          alt=""
+        >
       </div>
-      <div class="txt-wr"><span>Скорость обработки до 10 000 <br>сделок в
-          секунду и 1 000 000 <br>TCP-соединений.</span></div>
+      <div class="txt-wr">
+        <span>
+          {{'Processing speed up to 10,000' | translate}} <br>
+          {{'transactions per second and 1,000,000' | translate}}<br>
+          {{'TCP connections' | translate}}.
+        </span>
+      </div>
     </div>
     <div class="link-item">
       <div class="icon-wr">
-        <img src="assets/img/info-gr2.svg" alt="">
+        <img
+          src="assets/img/info-gr2.svg"
+          alt=""
+        >
       </div>
-      <div class="txt-wr"><span>Брандмауэр веб-приложений <br>обнаруживает и
-          блокирует <br>хакерские атаки.</span></div>
+      <div class="txt-wr">
+        <span>
+          {{'The web application firewall' | translate}}<br>
+          {{'detects and blocks' | translate}}<br>
+          {{'hacker attacks' | translate}}.
+        </span>
+      </div>
     </div>
     <div class="link-item">
       <div class="icon-wr">
-        <img src="assets/img/info-gr3.svg" alt="">
+        <img
+          src="assets/img/info-gr3.svg"
+          alt=""
+        >
       </div>
-      <div class="txt-wr"><span>Надежная безопасность: более <br>95% валют
-          хранятся на <br>холодных кошельках</span></div>
+      <div class="txt-wr">
+        <span>
+          {{'Reliable security: more' | translate}}<br>
+          {{'han 95% of currencies are stored' | translate}}<br>
+          {{'in cold wallets' | translate}}
+        </span>
+      </div>
     </div>
     <div class="link-item">
       <div class="icon-wr">
-        <img src="assets/img/info-gr4.svg" alt="">
+        <img
+          src="assets/img/info-gr4.svg"
+          alt=""
+        >
       </div>
-      <div class="txt-wr"><span>Удобный интерфейс с <br>добавлением обычных <br>инструментов</span></div>
+      <div class="txt-wr">
+        <span>
+          {{'User-friendly interface' | translate}}<br>
+          {{'with the addition of' | translate}}<br>
+          {{'conventional tools' | translate}}
+        </span>
+      </div>
     </div>
   </div>
 </div>
