--- a/src/app/main-page/bottom-form/bottom-form.component.html
+++ b/src/app/main-page/bottom-form/bottom-form.component.html
@@ -2,19 +2,26 @@
   <div class="bottom-form-wr">
     <div class="left-part">
       <div class="txt-wr">
-        <h2>Начните торговать биткойнами сегодня.</h2>
-        <p>Создайте свой аккаунт и начните через несколько минут.</p>
+        <h2>{{'Start trading cryptocurrency today' | translate}}.</h2>
+        <p>{{'Create your account and start in a minute' | translate}}.</p>
       </div>
 
     </div>
     <div class="right-part">
       <form action="#">
         <div class="wrap-input popup__wrap-input">
-          <input required class="wrap-input__input"
-            placeholder="Enter email">
+          <input
+            required
+            class="wrap-input__input"
+            placeholder="Enter email"
+            name="email"
+            [(ngModel)]="email"
+          >
         </div>
         <button
-          class="btn balance__title-btn">
+          class="btn balance__title-btn"
+          (click)="openRegistration()"
+        >
           {{'Start Registration' | translate}}
         </button>
       </form>
