--- a/src/app/main-page/graphic-links/graphic-links.component.html
+++ b/src/app/main-page/graphic-links/graphic-links.component.html
@@ -1,33 +1,63 @@
 <div class="markets-home">
   <div class="markets-block-link">
     <div class="link-item">
-      <a href="#" class="lnk"></a>
+      <a
+        href="https://about.exrates.me/en/analytics"
+        class="lnk"
+      ></a>
       <div class="icon-wr">
-        <img src="assets/img/link1.svg" alt="">
+        <img
+          src="assets/img/link1.svg"
+          alt=""
+        >
       </div>
-      <div class="txt-wr"><span>Профессиональная <br>аналитика рынка</span></div>
+      <div class="txt-wr"><span>{{'Professional' | translate}} <br>{{'market analytics' | translate}}</span></div>
     </div>
     <div class="link-item">
-      <a href="#" class="lnk"></a>
+      <a
+        href="#"
+        routerLink="/ieo"
+        class="lnk"
+      ></a>
       <div class="icon-wr">
-        <img src="assets/img/link2.svg" alt="">
+        <img
+          src="assets/img/link2.svg"
+          alt=""
+        >
       </div>
-      <div class="txt-wr"><span>X-Platform для запуска <br>IEO</span></div>
+      <div class="txt-wr"><span>{{'X-Platform' | translate}} <br>{{'to launch IEO' | translate}}</span></div>
     </div>
     <div class="link-item">
-      <a href="#" class="lnk"></a>
+      <a
+        href="https://about.exrates.me/en/support-center"
+        class="lnk"
+      ></a>
       <div class="icon-wr">
-        <img src="assets/img/link3.svg" alt="">
+        <img
+          src="assets/img/link3.svg"
+          alt=""
+        >
       </div>
-      <div class="txt-wr"><span>24/7 Онлайн поддержка</span></div>
+      <div class="txt-wr"><span>{{'24/7 Online Support' | translate}}</span></div>
     </div>
     <div class="link-item">
-      <a href="#" class="lnk"></a>
+      <a
+        href="#"
+        class="lnk"
+      ></a>
       <div class="icon-wr">
-        <img src="assets/img/link4.svg" alt="">
+        <img
+          src="assets/img/link4.svg"
+          alt=""
+        >
       </div>
-      <div class="txt-wr"><span>Партнерская программа -<br> поддержка управления
-          <br>рынком </span></div>
+      <div class="txt-wr">
+        <span>
+          {{'Affiliate Program' | translate}} -<br>
+          {{'Market Management' | translate}}<br>
+          {{'Support' | translate}}
+        </span>
+      </div>
     </div>
   </div>
 </div>
