DEVEX-3914 fixed favourite

--- a/src/assets/scss/pages/_home-page.scss
+++ b/src/assets/scss/pages/_home-page.scss
@@ -735,7 +735,10 @@
       }
       .fav {
         width: 56px;
-      }
+        .is-fav svg {
+          fill: #FFB74C;
+        }
+       }
       .pair {
         width: 120px;
       }
