--- a/src/app/main-page/markets-home/markets-home.component.html
+++ b/src/app/main-page/markets-home/markets-home.component.html
@@ -114,7 +114,7 @@
           [attr.data-favorite]="pair.currencyPairId"
           *ngIf="isAuthenticated"
         >
-          <span>
+          <span [ngClass]="{'is-fav': getIsFavorite(pair.currencyPairId)}">
             <svg
               width="15"
               height="15"
