--- a/src/app/main-page/info-grafics/info-grafics.component.html
+++ b/src/app/main-page/info-grafics/info-grafics.component.html
@@ -40,7 +40,7 @@
       <div class="txt-wr">
         <span>
           {{'Reliable security: more' | translate}}<br>
-          {{'han 95% of currencies are stored' | translate}}<br>
+          {{'than 95% of currencies are stored' | translate}}<br>
           {{'in cold wallets' | translate}}
         </span>
       </div>
