--- a/src/app/main-page/markets-home/markets-home.component.html
+++ b/src/app/main-page/markets-home/markets-home.component.html
@@ -91,6 +91,7 @@
     <table
       class="table"
       id="markets-container"
+      [ngClass]="{'no-auth' : !isAuthenticated}"
     >
       <tr class="thead">
         <td
