--- a/src/app/main-page/bottom-slider/bottom-slider.component.html
+++ b/src/app/main-page/bottom-slider/bottom-slider.component.html
@@ -35,7 +35,7 @@
           </div>
         </div>
         <div class="txt-inner">
-          <h2>Самая популярная <br>валюта теперь в <br>торгуется на Exrates</h2>
+          <h2>The most popular <br> currency is now in <br> is trading on Exrates</h2>
         </div>
       </div>
       <div class="slide-link">
@@ -76,8 +76,7 @@
           </div>
         </div>
         <div class="txt-inner">
-          <h2>Самая популярная <br>валюта теперь в гейм <br>индустрии вместе
-            <br>с UBISOFT</h2>
+          <h2>The most popular currency<br> is now in the game industry <br> together with UBISOFT</h2>
         </div>
 
       </div>
@@ -119,8 +118,9 @@
           </div>
         </div>
         <div class="txt-inner">
-          <h2><span>172,000 </span>трейдеров</h2>
-          <p>Регистрируйся и стань частью трейдерского сообщества Exrates</p>
+
+          <h2> <span> 172,000 </span> traders </h2>
+          <p> Register and become part of the Exrates trading community </p>
         </div>
 
       </div>
